# app/serializers/api/v1/post_serializer.rb
@@ -8,11 +8,23 @@ module Api
       set_id :public_id
       set_type :post
 
-      attributes :title, :slug, :content, :content_json, :content_html,
-                 :content_text, :excerpt, :status,
-                 :published_at, :scheduled_for, :featured,
-                 :seo_title, :seo_description, :reading_time_minutes,
-                 :created_at, :updated_at
+      attributes :title,
+        :slug,
+        :content,
+        :content_json,
+        :content_html,
+        :content_text,
+        :excerpt,
+        :status,
+        :published_at,
+        :scheduled_for,
+        :featured,
+        :seo_title,
+        :seo_description,
+        :reading_time_minutes,
+        :content_schema_version,
+        :created_at,
+        :updated_at
 
       attribute :metadata do |post|
         post.metadata || {}
