# app/serializers/api/v1/public_blog_serializer.rb
@@ -1,0 +1,18 @@
+# frozen_string_literal: true
+
+module Api
+  module V1
+    class PublicBlogSerializer
+      include JSONAPI::Serializer
+
+      set_type :blog
+      set_id :slug
+
+      attributes :name, :slug, :description
+
+      attribute :settings do |blog|
+        blog.settings || {}
+      end
+    end
+  end
+end
