# db/migrate/20251223010101_add_content_schema_version.rb
@@ -1,0 +1,9 @@
+# frozen_string_literal: true
+
+class AddContentSchemaVersion < ActiveRecord::Migration[8.0]
+  def change
+    add_column :posts, :content_schema_version, :integer, default: 1, null: false
+    add_column :drafts, :content_schema_version, :integer, default: 1, null: false
+    add_column :revisions, :content_schema_version, :integer, default: 1, null: false
+  end
+end
